# fortran-format-hooks

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  setup.cfg
fortran_format_hooks/: check_fortran_indentation.py  check_indentation.py
fortran_format_hooks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
