[metadata]
name = fortran-format-hooks
description = A pre-commit hook to check fortran format
version = 0.1.0
author = Ned Thaddeus Taylor
author_email = n.t.taylor@exeter.ac.uk
license = MIT
url = https://github.com/nedtaylor

[options]
packages = find:

[options.entry_points]
console_scripts =
    print-arguments = fortran_format_hooks.main:main